Added timer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ if (CMAKE_BUILD_TYPE MATCHES Release)
 
             src/read_files.cpp include/read_files.h
 
-            src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp)
+            src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp
+            include/timer.h src/timer.cpp)
 
     message("Release mode")
 
