--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(da_t1)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 set(CREATE_EXE TRUE)
 
@@ -15,8 +15,7 @@ set(CREATE_EXE TRUE)
           src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp
             include/timer.h src/timer.cpp
             src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp
-            include/timer.h src/timer.cpp include/OptimizeNumberOfDeliveries.h src/OptimizeNumberOfDeliveries.cpp include/Objects.h)
+            include/timer.h src/timer.cpp include/OptimizeNumberOfDeliveries.h src/OptimizeNumberOfDeliveries.cpp include/Objects.h src/Memento.cpp include/Memento.h)
 
     message("Release mode")
-endif()
 
