--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,11 @@ add_executable(da_t1 main.cpp
 
         src/read_files.cpp include/read_files.h
         src/knapsack.cpp include/knapsack.h
-        src/cen3.cpp include/cen3.h src/OptimizeProfit.cpp include/OptimizeProfit.h
+        src/express_deliveries.cpp include/express_deliveries.h src/OptimizeProfit.cpp include/OptimizeProfit.h
         src/OptimizeProfit.cpp
-        src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp
+        src/express_deliveries.cpp include/express_deliveries.h include/menu.h src/menu.cpp
         include/timer.h src/timer.cpp
-        src/cen3.cpp include/cen3.h include/menu.h src/menu.cpp
+        src/express_deliveries.cpp include/express_deliveries.h include/menu.h src/menu.cpp
         include/timer.h src/timer.cpp include/OptimizeNumberOfDeliveries.h
         src/OptimizeNumberOfDeliveries.cpp
         include/Objects.h src/Memento.cpp include/Memento.h)
